# StockTracker

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OPTIMIZATION_SUMMARY.md  README.md  app.py  main.py  performance_optimizer.py  pyproject.toml  requirements.txt  test_report_20250725_133527.json  test_report_20260122_112348.json
analysis/: backtest.py  portfolio.py  risk.py  technical.py
data/: fetcher.py
docs/: api.md  architecture.md  benchmarks.md  configuration.md  deployment.md  development.md  examples.md  faq.md  installation.md  ml_models.md  modules.md  testing.md  troubleshooting.md  usage.md
examples/: __init__.py  demo.py  demo_updated.py  performance_demo.py
models/: advanced.py  base.py  predictors.py
tests/: test_all.py  test_fixes.py  test_portfolio.py  test_transformer.py
ui/: web.py
visualization/: charts.py
