[project]
name = "stocktracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.17.26",
    "tensorflow>=2.19.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "xgboost>=2.0.0",
    "joblib>=1.4.0",
    "plotly>=5.18.0",
    "streamlit>=1.47.0",
    "pandas>=2.0.0",
    "numpy>=1.21.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
