[project]
name = "stocktracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare==1.17.26",
    "tensorflow==2.19.0",
    "scikit-learn==1.7.1",
    "matplotlib==3.10.3",
    "xgboost==3.0.2",
    "joblib==1.5.1",
    "plotly==6.2.0",
    "streamlit==1.47.0",
    "pandas==2.3.1",
    "numpy==2.1.3",
    "pytest==9.0.2",
    "absl-py==2.3.1",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.14",
    "aiosignal==1.4.0",
    "akracer==0.0.13",
    "altair==5.5.0",
    "astunparse==1.6.3",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.4",
    "blinker==1.9.0",
    "cachetools==6.1.0",
    "certifi==2025.7.14",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "decorator==5.2.1",
    "et-xmlfile==2.0.0",
    "flatbuffers==25.2.10",
    "fonttools==4.59.0",
    "frozenlist==1.7.0",
    "gast==0.6.0",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "google-pasta==0.2.0",
    "grpcio==1.73.1",
    "h5py==3.14.0",
    "html5lib==1.1",
    "idna==3.10",
    "iniconfig==2.3.0",
    "jinja2==3.1.6",
    "jsonpath==0.82.2",
    "jsonschema==4.25.0",
    "jsonschema-specifications==2025.4.1",
    "keras==3.10.0",
    "kiwisolver==1.4.8",
    "libclang==18.1.1",
    "lxml==6.0.0",
    "markdown==3.8.2",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "ml-dtypes==0.5.1",
    "multidict==6.6.3",
    "namex==0.1.0",
    "narwhals==1.48.0",
    "nest-asyncio==1.6.0",
    "nvidia-nccl-cu12==2.27.6",
    "openpyxl==3.1.5",
    "opt-einsum==3.4.0",
    "optree==0.16.0",
    "packaging==25.0",
    "pillow==11.3.0",
    "pluggy==1.6.0",
    "propcache==0.3.2",
    "protobuf==5.29.5",
    "py-mini-racer==0.6.0",
    "pyarrow==21.0.0",
    "pydeck==0.9.1",
    "pygments==2.19.2",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "referencing==0.36.2",
    "requests==2.32.4",
    "rich==14.0.0",
    "rpds-py==0.26.0",
    "scipy==1.16.0",
    "setuptools==80.9.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "soupsieve==2.7",
    "tabulate==0.9.0",
    "tenacity==9.1.2",
    "tensorboard==2.19.0",
    "tensorboard-data-server==0.7.2",
    "termcolor==3.1.0",
    "threadpoolctl==3.6.0",
    "toml==0.10.2",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "typing-extensions==4.14.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "watchdog==6.0.0",
    "webencodings==0.5.1",
    "werkzeug==3.1.3",
    "wheel==0.45.1",
    "wrapt==1.17.2",
    "xlrd==2.0.2",
    "yarl==1.20.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
